# eventyay-talk-pages

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml
pretalx_pages/: __init__.py  apps.py  models.py  signals.py  static_pages_configuration.py  urls.py  views.py
pretalx_pages/locale/ar/LC_MESSAGES/: django.po
pretalx_pages/locale/ca/LC_MESSAGES/: django.po
pretalx_pages/locale/cs/LC_MESSAGES/: django.po
pretalx_pages/locale/de_DE/LC_MESSAGES/: django.po
pretalx_pages/locale/de_Formal/LC_MESSAGES/: django.po
pretalx_pages/locale/el/LC_MESSAGES/: django.po
pretalx_pages/locale/en_Mozilla/LC_MESSAGES/: django.po
pretalx_pages/locale/es/LC_MESSAGES/: django.po
pretalx_pages/locale/es_MX/LC_MESSAGES/: django.po
pretalx_pages/locale/fr_FR/LC_MESSAGES/: django.po
pretalx_pages/locale/id/LC_MESSAGES/: django.po
pretalx_pages/locale/it/LC_MESSAGES/: django.po
pretalx_pages/locale/ja_JP/LC_MESSAGES/: django.po
pretalx_pages/locale/ko/LC_MESSAGES/: django.po
pretalx_pages/locale/nl/LC_MESSAGES/: django.po
pretalx_pages/locale/pt_BR/LC_MESSAGES/: django.po
pretalx_pages/locale/pt_PT/LC_MESSAGES/: django.po
pretalx_pages/locale/ru/LC_MESSAGES/: django.po
pretalx_pages/locale/sl/LC_MESSAGES/: django.po
pretalx_pages/locale/sv/LC_MESSAGES/: django.po
pretalx_pages/locale/test/LC_MESSAGES/: django.po
pretalx_pages/locale/zh_Hant/LC_MESSAGES/: django.po
pretalx_pages/locale/zh_TW/LC_MESSAGES/: django.po
pretalx_pages/migrations/: 0001_create_page_model.py  0001_initial.py
pretalx_pages/templates/pretalx_pages/: base.html  delete.html  form.html  front_page.html  index.html  show.html
