[project]
name = "pretalx-pages"
dynamic = ["version"]
description = "Static pages for pretalx, e.g. information, venue listings, a Code of Conduct, etc."
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
maintainers = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]

dependencies = []

[project.entry-points."pretalx.plugin"]
pretalx_pages = "pretalx_pages:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "pretalx"]

[project.urls]
homepage = "https://github.com/pretalx/pretalx-pages"
repository = "https://github.com/pretalx/pretalx-pages.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [
  ".*",
]
